--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -6,4 +6,9 @@
   --bg-gradient: linear-gradient(175.09deg, #F0FFE3 0.88%, rgba(202, 233, 255, 0) 64.33%);
   --font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-space-grotesk: 'Space Grotesk';
+  --font-work-sans: 'Work Sans';
+  --max-width: 1300px;
+
+  --sm-pl: 68px;
+  --sm-pr: 20px;
 }
