--- a/assets/fonts/fonts.css
+++ b/assets/fonts/fonts.css
@@ -2,3 +2,7 @@
   font-family: 'Space Grotesk';
   src: url('./SpaceGrotesk-VariableFont_wght.ttf');
 }
+@font-face {
+  font-family: 'Work Sans';
+  src: url('./WorkSans_Light.ttf');
+}
