--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,7 @@ html, body {
   box-sizing: border-box;
 }
 body {
-  font: 1rem/1.5 var(-font-sans-serif);
+  font: 1rem/1.5 var(--font-sans-serif);
   box-sizing: border-box;
   padding: 0;
   border: 0;
@@ -21,6 +21,11 @@ body {
   overflow-y: scroll;
 }
 
+p {
+  padding: 0;
+  margin: 0;
+}
+
 /* `sm` applies to x-small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) { }
 
@@ -31,7 +36,14 @@ body {
 @media (max-width: 991.98px) { }
 
 /* `xl` applies to large devices (desktops, less than 1200px) */
-@media (max-width: 1199.98px) { }
+@media (max-width: 1199.98px) {
+  html {
+    font-size: 14px;
+  }
+  body {
+    font: 1rem/1.5 var(--font-sans-serif);
+  }
+}
 
 /* `xxl` applies to x-large devices (large desktops, less than 1400px) */
 @media (max-width: 1399.98px) { }
