--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -9,8 +9,8 @@
   --font-work-sans: 'Work Sans';
 
   /*必须大于1396，否则Space Grotesk与默认字体换行不一致，导致ScrollTrigger 定位错位*/
-  --max-width: 1396px;
+  --max-width: 87.5rem;
 
-  --sm-pl: 68px;
-  --sm-pr: 20px;
+  --sm-pl: 4.25rem;
+  --sm-pr: 1.25rem;
 }
