--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,10 +21,34 @@ body {
   overflow-y: scroll;
 }
 
-div, p {
+div, p, ul, li {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  border: 0;
+  outline: 0;
+  vertical-align: baseline;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+a {
+  display: inline-block;
+  color: var(--black);
+  text-decoration: none;
+}
+a:active, a:link, a:visited {
+  text-decoration: none;
+}
+
+button {
+  box-sizing: inherit;
+  padding: 0;
+  border: 0;
+  margin: 0;
+  background: none;
 }
 
 /* `xxl` applies to x-large devices (large desktops, less than 1400px) */
