--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,9 +4,11 @@ html, body {
   -webkit-overflow-scrolling: touch;
   overflow-scrolling: touch;
   box-sizing: border-box;
+  user-select: none;
+  background-color: #FAFBF3;
 }
 body {
-  font: 1rem/1.5 var(--font-sans-serif);
+  font: 1rem/1.5 var(--font-regular);
   box-sizing: border-box;
   padding: 0;
   border: 0;
@@ -50,7 +52,9 @@ button {
   margin: 0;
   background: none;
 }
-
+/* button:hover{
+  opacity: 0.6;
+} */
 /* `xxl` applies to x-large devices (large desktops, less than 1400px) */
 @media (max-width: 1399.98px) {
   html {
@@ -69,14 +73,26 @@ button {
 }
 
 /* `lg` applies to medium devices (tablets, less than 992px) */
-@media (max-width: 991.98px) { }
+@media (max-width: 991.98px) { 
+
+}
 
 /* `md` applies to small devices (landscape phones, less than 768px) */
-@media (max-width: 767.98px) { }
+@media (max-width: 767.98px) {
+
+ }
 
 /* `sm` applies to x-small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
   html {
     font-size: 16px;
   }
+}
+
+section{
+  position: relative;
+  z-index:0;
+}
+h2{
+  @apply family-semi-bold text-15 line-height-18;
 }
