--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -2,12 +2,16 @@
   --black: #000;
   --white: #fff;
   --main-color: var(--black);
+  --primary-color: #DAFD60;
   --nav-color: #171717;
+  --bg-color: #FAFBF3;
   --bg-gradient: linear-gradient(175.09deg, #F0FFE3 0.88%, rgba(202, 233, 255, 0) 64.33%);
   --font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-space-grotesk: 'Space Grotesk';
   --font-work-sans: 'Work Sans';
-
+  --font-regular:'ChakraPetch Regular';
+  --font-semi-bold:'ChakraPetch SemiBold';
+  --font-medium:'ChakraPetch Medium';
   /*必须大于1396，否则Space Grotesk与默认字体换行不一致，导致ScrollTrigger 定位错位*/
   --max-width: 87.5rem;
 
