--- a/assets/fonts/fonts.css
+++ b/assets/fonts/fonts.css
@@ -6,3 +6,15 @@
   font-family: 'Work Sans';
   src: url('./WorkSans_Light.ttf');
 }
+@font-face {
+  font-family: 'ChakraPetch Regular';
+  src: url('./ChakraPetch-Regular.ttf');
+}
+@font-face {
+  font-family: 'ChakraPetch SemiBold';
+  src: url('./ChakraPetch-SemiBold.ttf');
+}
+@font-face {
+  font-family: 'ChakraPetch Medium';
+  src: url('./ChakraPetch-Medium.ttf');
+}
